--- a/deployment.yaml
+++ b/deployment.yaml
@@ -72,6 +72,21 @@ spec:
   selector:
     run: service-b
 ---
+# Network policy to disallow traffic between pods (will allow traffic only with access: "true" label)
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: access-service-a
+spec:
+  podSelector:
+    matchLabels:
+      app: service-a
+  ingress:
+  - from:
+    - podSelector:
+        matchLabels:
+          access: "true"
+---
 # Ingress
 apiVersion: extensions/v1beta1
 kind: Ingress
